[package]
name = "winkernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
ntapi = { version = "0.3.6", features = ["kernel", "impl-default", "nightly"] }
winapi = { version = "0.3.9", features = ["ntdef", "ntstatus", "basetsd"] }
libc = "0.2.106"
cstr_core = "0.2.4"
